# product-description-generator

./: pyproject.toml
src/product_description_generator/: crew.py  main.py  utils.py
src/product_description_generator/config/: agents.yaml  tasks.yaml
src/product_description_generator/tools/: __init__.py  gcs_tool.py
