[project]
name = "product_description_generator"
version = "0.1.0"
description = "Product Description Generator using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2",
    "langchain-core>=0.2.30",
]

[project.scripts]
product_description_generator = "product_description_generator.main:run"
run_crew = "product_description_generator.main:run"
train = "product_description_generator.main:train"
replay = "product_description_generator.main:replay"
test = "product_description_generator.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
